samples/_failures_safe/1761795500_20a7f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98beac9b.c: In function ‘main’:
./samples/SAFE/__tmp_98beac9b.c:134:5: error: expected expression at end of input
  134 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_98beac9b.c:134:5: error: expected declaration or statement at end of input
